<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">
    <fragment
        android:id="@+id/navigation_news"
        android:name="com.zhen.maptocanada.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_commonsense"
        android:name="com.zhen.maptocanada.ui.commonknowledge.CommonKnowledge"
        android:label="@string/title_common_sense"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_crs"
        android:name="com.zhen.maptocanada.ui.crs.CrsFragment"
        android:label="@string/title_self_crs"
        tools:layout="@layout/fragment_crs" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.zhen.maptocanada.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search"
        />
</navigation>