<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="android.text.Html" />

        <variable
            name="UserData"
            type="com.zhen.maptocanada.ui.crs.data.CrsUserData" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_crs_can_work_exp_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crs_canadian_exp_title"
                android:textSize="28dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_crs_canadian_work_exp_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@{Html.fromHtml(@string/crs_canadian_exp_desc)}"
                app:layout_constraintTop_toBottomOf="@id/tv_crs_can_work_exp_title" />

            <Spinner
                android:id="@+id/spin_can_work_years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/crs_canadian_work_exp_years"
                app:layout_constraintTop_toBottomOf="@id/tv_crs_canadian_work_exp_desc" />

            <View
                android:id="@+id/break_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/spin_can_work_years" />

            <TextView
                android:id="@+id/tv_foreign_work_exp_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/crs_foreign_work_title"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@id/break_line" />

            <TextView
                android:id="@+id/tv_foreign_work_exp_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crs_foreign_work_desc"
                app:layout_constraintTop_toBottomOf="@id/tv_foreign_work_exp_title" />

            <Spinner
                android:id="@+id/spin_foreign_work_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/crs_foreign_work_exp_years"
                app:layout_constraintTop_toBottomOf="@id/tv_foreign_work_exp_desc" />

            <View
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:id="@+id/break_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/spin_foreign_work_exp" />

            <TextView
                android:id="@+id/tv_lmia_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/crs_lmia_title"
                android:textSize="28dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/break_line_2" />

            <TextView
                android:id="@+id/tv_lmia_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crs_lmia_desc"
                app:layout_constraintTop_toBottomOf="@id/tv_lmia_title" />

            <CheckBox
                android:id="@+id/cb_has_lmia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={UserData.hasLmia}"
                android:text="@string/crs_lmia_checkbox_desc"
                app:layout_constraintTop_toBottomOf="@id/tv_lmia_desc" />

            <View
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:id="@+id/break_line_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/cb_has_lmia" />

            <TextView
                android:id="@+id/tv_crs_nomination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/crs_has_nomination"
                android:textSize="28dp"
                app:layout_constraintTop_toBottomOf="@id/break_line_3" />

            <TextView
                android:id="@+id/tv_has_pn_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crs_pn_desc"
                app:layout_constraintTop_toBottomOf="@id/tv_crs_nomination" />

            <CheckBox
                android:id="@+id/cb_crs_has_pn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={UserData.hasPN}"
                android:text="@string/crs_has_nomination_desc"
                app:layout_constraintTop_toBottomOf="@id/tv_has_pn_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>
